Fix select label spacing

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header > .inner {
   margin-bottom: 30px;
 }
 
-.repo-label {
+.select-label {
   font-weight: 500;
   margin-left: 20px;
   margin-right: 5px;
